force-app/main/default/objects/Offer__c/Offer__c.object-meta.xml
<CustomObject>
    <description>Controls price, delivery, term for a subscription including print, digital and alternate publications. Also holds links to the premiums offered and the campaigns which will utilize this offer.</description>
    <label>Offer</label>
    <nameField>
        <label>Offer Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Offers</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>