force-app/main/default/objects/Offer__c/fields/Activation_Fee__c.field-meta.xml
<CustomField>
        <fullName>Activation_Fee__c</fullName>
        <label>Activation Fee</label>
        <summarizedField>Offer_Product__c.Activation_Fee__c</summarizedField>
        <summaryFilterItems>
            <field>Offer_Product__c.Is_Activation_Fee__c</field>
            <operation>equals</operation>
            <value>True</value>
        </summaryFilterItems>
        <summaryForeignKey>Offer_Product__c.Offer__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </CustomField>