force-app/main/default/objects/Offer__c/fields/Active__c.field-meta.xml
<CustomField>
        <fullName>Active__c</fullName>
        <defaultValue>false</defaultValue>
        <description>This field is used to toggle the offer active or inactive</description>
        <label>Active</label>
        <type>Checkbox</type>
    </CustomField>