force-app/main/default/objects/Offer__c/fields/Amount__c.field-meta.xml
<CustomField>
        <fullName>Amount__c</fullName>
        <formula>AmountforRollup__c + Sunday_AmountRollup__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </CustomField>