force-app/main/default/objects/Offer__c/fields/AmountforRollup__c.field-meta.xml
<CustomField>
        <fullName>AmountforRollup__c</fullName>
        <description>This field rolls up from Amount on Offer Product</description>
        <inlineHelpText>This value represents total weekly amount excluding any Sunday Amount multiplied by the number of weeks</inlineHelpText>
        <label>Weekly Amount</label>
        <summarizedField>Offer_Product__c.AmountforRollup__c</summarizedField>
        <summaryFilterItems>
            <field>Offer_Product__c.Is_Activation_Fee__c</field>
            <operation>equals</operation>
            <value>False</value>
        </summaryFilterItems>
        <summaryForeignKey>Offer_Product__c.Offer__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </CustomField>