force-app/main/default/objects/Offer__c/fields/DSI_Id__c.field-meta.xml
<CustomField>
        <fullName>DSI_Id__c</fullName>
        <externalId>true</externalId>
        <label>DSI Id</label>
        <length>50</length>
        <type>Text</type>
    </CustomField>