force-app/main/default/objects/Offer__c/fields/End_Date__c.field-meta.xml
<CustomField>
        <fullName>End_Date__c</fullName>
        <description>Stores the end date of the offer</description>
        <label>End Date</label>
        <type>Date</type>
    </CustomField>