force-app/main/default/objects/Offer__c/fields/Free_Trial__c.field-meta.xml
<CustomField>
        <fullName>Free_Trial__c</fullName>
        <defaultValue>false</defaultValue>
        <description>This field is used to denote whether this offer is a free trial offer</description>
        <label>Free Trial?</label>
        <type>Checkbox</type>
    </CustomField>