force-app/main/default/objects/Offer__c/fields/Friday__c.field-meta.xml
<CustomField>
        <fullName>Friday__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Friday</label>
        <type>Checkbox</type>
    </CustomField>