force-app/main/default/objects/Offer__c/fields/FridayCount__c.field-meta.xml
<CustomField>
        <fullName>FridayCount__c</fullName>
        <label>Friday</label>
        <summaryFilterItems>
            <field>Offer_Product__c.Friday__c</field>
            <operation>equals</operation>
            <value>True</value>
        </summaryFilterItems>
        <summaryForeignKey>Offer_Product__c.Offer__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </CustomField>