force-app/main/default/objects/Offer__c/fields/Marketing_Product_List__c.field-meta.xml
<CustomField>
        <fullName>Marketing_Product_List__c</fullName>
        <label>Marketing Product List</label>
        <length>25</length>
        <type>Text</type>
    </CustomField>