force-app/main/default/objects/Offer__c/fields/Monday__c.field-meta.xml
<CustomField>
        <fullName>Monday__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Monday</label>
        <type>Checkbox</type>
    </CustomField>