force-app/main/default/objects/Offer__c/fields/Number_of_Days_per_week__c.field-meta.xml
<CustomField>
        <fullName>Number_of_Days_per_week__c</fullName>
        <formula>IF(MondayCount__c&gt;0, 1, 0) +   
IF(TuesdayCount__c&gt;0, 1, 0) + 
IF(WednesdayCount__c&gt;0, 1, 0) + 
IF(ThursdayCount__c&gt;0, 1, 0)+
IF(FridayCount__c&gt;0, 1, 0)+
IF(SaturdayCount__c&gt;0, 1, 0)</formula>
        <label>Number of Days per week</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </CustomField>