force-app/main/default/objects/Offer__c/fields/Per_Copy__c.field-meta.xml
<CustomField>
        <fullName>Per_Copy__c</fullName>
        <label>Per Copy</label>
        <precision>18</precision>
        <scale>4</scale>
        <type>Currency</type>
    </CustomField>