force-app/main/default/objects/Offer__c/fields/Per_Copy_SundayRollup__c.field-meta.xml
<CustomField>
        <fullName>Per_Copy_SundayRollup__c</fullName>
        <label>Per Copy Sunday</label>
        <summarizedField>Offer_Product__c.Per_Copy_Sunday__c</summarizedField>
        <summaryForeignKey>Offer_Product__c.Offer__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </CustomField>