force-app/main/default/objects/Offer__c/fields/Per_CopyRollup__c.field-meta.xml
<CustomField>
        <fullName>Per_CopyRollup__c</fullName>
        <label>Per Copy</label>
        <summarizedField>Offer_Product__c.Per_Copy__c</summarizedField>
        <summaryForeignKey>Offer_Product__c.Offer__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </CustomField>