force-app/main/default/objects/Offer__c/fields/Per_Week__c.field-meta.xml
<CustomField>
        <fullName>Per_Week__c</fullName>
        <formula>Total_Amount__c   /Number_of_Weeks__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>This value represents the Subscription Amount divided by the number of weeks</inlineHelpText>
        <label>Per Week</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </CustomField>