force-app/main/default/objects/Offer__c/fields/Premium_Products__c.field-meta.xml
<CustomField>
        <fullName>Premium_Products__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Premium</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>Product2.Family</field>
                <operation>equals</operation>
                <value>Premium</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>Product2</referenceTo>
        <relationshipLabel>Offers</relationshipLabel>
        <relationshipName>Offers</relationshipName>
        <type>Lookup</type>
    </CustomField>