force-app/main/default/objects/Offer__c/fields/Rate__c.field-meta.xml
<CustomField>
        <fullName>Rate__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>This field is used to store the lookup relationship to rate</description>
        <label>Rate</label>
        <referenceTo>Rate__c</referenceTo>
        <relationshipLabel>Offers</relationshipLabel>
        <relationshipName>Offers</relationshipName>
        <type>Lookup</type>
    </CustomField>