force-app/main/default/objects/Offer__c/fields/Renewal_Offer__c.field-meta.xml
<CustomField>
        <fullName>Renewal_Offer__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Renewal Offer</label>
        <referenceTo>Offer__c</referenceTo>
        <relationshipLabel>Offers</relationshipLabel>
        <relationshipName>Offers</relationshipName>
        <type>Lookup</type>
    </CustomField>