force-app/main/default/objects/Offer__c/fields/Saturday__c.field-meta.xml
<CustomField>
        <fullName>Saturday__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Saturday</label>
        <type>Checkbox</type>
    </CustomField>