force-app/main/default/objects/Offer__c/fields/Start_Date__c.field-meta.xml
<CustomField>
        <fullName>Start_Date__c</fullName>
        <description>Stores the start date for this offer</description>
        <label>Start Date</label>
        <type>Date</type>
    </CustomField>