force-app/main/default/objects/Offer__c/fields/Subscription_Amount__c.field-meta.xml
<CustomField>
        <fullName>Subscription_Amount__c</fullName>
        <formula>Sunday_AmountRollup__c + AmountforRollup__c</formula>
        <inlineHelpText>This value includes only the total weekly amount and total Sunday Amount</inlineHelpText>
        <label>Subscription Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </CustomField>