force-app/main/default/objects/Offer__c/fields/Sunday_AmountRollup__c.field-meta.xml
<CustomField>
        <fullName>Sunday_AmountRollup__c</fullName>
        <description>This field is used to roll up the Sunday Amount</description>
        <inlineHelpText>This value represents the total Sunday Amount multiplied by the number of weeks</inlineHelpText>
        <label>Sunday Amount</label>
        <summarizedField>Offer_Product__c.SundayAmountRollup__c</summarizedField>
        <summaryFilterItems>
            <field>Offer_Product__c.Is_Activation_Fee__c</field>
            <operation>equals</operation>
            <value>False</value>
        </summaryFilterItems>
        <summaryForeignKey>Offer_Product__c.Offer__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </CustomField>