force-app/main/default/objects/Offer__c/fields/Total_Amount__c.field-meta.xml
<CustomField>
        <fullName>Total_Amount__c</fullName>
        <formula>Sunday_AmountRollup__c + AmountforRollup__c + Activation_Fee__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>This value is Subscription Amount plus Activation Fee if Activation fee exists for Offer</inlineHelpText>
        <label>Total Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </CustomField>