force-app/main/default/objects/Offer__c/fields/Total_Amount_for_Rollup__c.field-meta.xml
<CustomField>
        <fullName>Total_Amount_for_Rollup__c</fullName>
        <label>Total Amount</label>
        <summarizedField>Offer_Product__c.Total_Amount_for_Rollup__c</summarizedField>
        <summaryForeignKey>Offer_Product__c.Offer__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </CustomField>