force-app/main/default/objects/Offer__c/listViews/All.listView-meta.xml
<ListView>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Active__c</columns>
        <columns>DSI_Id__c</columns>
        <columns>Total_Amount__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </ListView>