force-app/main/default/objects/Offer__c/listViews/Inquirer.listView-meta.xml
<ListView>
        <fullName>Inquirer</fullName>
        <columns>NAME</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>NAME</field>
            <operation>contains</operation>
            <value>IN</value>
        </filters>
        <label>Inquirer</label>
    </ListView>